force-app/main/default/objects/ClanWarLeagueRoundWar__c/ClanWarLeagueRoundWar__c.object-meta.xml
<CustomObject>
    <label>Clan War League Round War</label>
    <nameField>
        <label>CWL Round War Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clan War League Round Wars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>