force-app/main/default/objects/ClanWarLeagueRoundWar__c/fields/ClanWar__c.field-meta.xml
<CustomField>
    <fullName>ClanWar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clan War</label>
    <referenceTo>ClanWar__c</referenceTo>
    <relationshipLabel>CWL Round Wars</relationshipLabel>
    <relationshipName>CWLRoundWars</relationshipName>
    <type>Lookup</type>
</CustomField>