force-app/main/default/objects/ClanWarLeagueRoundWar__c/fields/ClanWarLeagueRound__c.field-meta.xml
<CustomField>
    <fullName>ClanWarLeagueRound__c</fullName>
    <label>Clan War League Round</label>
    <referenceTo>ClanWarLeagueRound__c</referenceTo>
    <relationshipLabel>CWL Round Wars</relationshipLabel>
    <relationshipName>CWLRoundWars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>