force-app/main/default/objects/ClanWarLeagueRoundWar__c/fields/WarTag__c.field-meta.xml
<CustomField>
    <fullName>WarTag__c</fullName>
    <externalId>true</externalId>
    <label>War Tag</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>